fix: add margin-top:$gap

--- a/style/style.scss
+++ b/style/style.scss
@@ -27,6 +27,9 @@
   max-width:1160px;
   margin: 0 auto;
 }
+.main__photo{
+margin-top: $gap;
+}
 
 .title {
   font-family: $font-titles;
